# repo-to-prompt

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
src/chunk/: code_chunker.rs
src/cli/: codeintel.rs  diff.rs  export.rs  index.rs  mod.rs  query.rs
src/config/: merge.rs
src/domain/: mod.rs
src/graph/: symbol_usage.rs
src/lsp/: mod.rs  rust_analyzer.rs
src/rank/: bm25.rs  mod.rs  ranker.rs
src/render/: context_pack.rs
src/repo_to_prompt/: chunker.py  cli.py  config.py  config_loader.py  fetcher.py  ranker.py  redactor.py  renderer.py  scanner.py  utils.py
src/utils/: mod.rs
tests/: cli_tests.rs  export_output_tests.rs  golden_export_tests.rs  test_acceptance.py  test_chunker.py  test_config_loader.py  test_edge_cases.py  test_enhanced_redaction.py  test_fixtures.py  test_golden.py  test_ranker.py  test_redactor.py  test_structure_safe_redaction.py  test_utils.py
tests/snapshots/: golden_export_tests__golden_chunks_jsonl.snap  golden_export_tests__golden_report_json.snap
