[package]
name = "repo-to-prompt"
version = "0.2.0"
edition = "2021"
authors = ["Repo-to-Prompt Contributors"]
license = "MIT"
description = "Convert repositories into LLM-friendly context packs for prompting and RAG"
repository = "https://github.com/wheevu/repo-to-prompt"
keywords = ["llm", "rag", "repository", "context", "prompt"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[lib]
name = "repo_to_prompt"
path = "src/lib.rs"

[[bin]]
name = "repo-to-prompt"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo", "env", "wrap_help"] }
clap_complete = "4.5"

# Error handling and logging
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"
figment = { version = "0.10", features = ["toml", "yaml", "env"] }

# File discovery and path handling
ignore = "0.4"
walkdir = "2.5"
globset = "0.4"

# Git operations
git2 = "0.19"

# Regex and text processing
regex = "1.10"
once_cell = "1.19"
fancy-regex = "0.13"

# Encoding detection
encoding_rs = "0.8"
chardetng = "0.1"

# Parallel processing
rayon = "1.10"

# Syntax-aware parsing
tree-sitter = "0.24"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# Hashing and IDs
sha2 = "0.10"

# Terminal UI
indicatif = "0.17"
console = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.1"
rustpython-parser = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
insta = { version = "1.38", features = ["yaml", "json"] }
similar-asserts = "1.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
